--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,10 @@ tasks.withType(Javadoc) {
 }
 
 dependencies {
-//    implementation 'org.bouncycastle:bcprov-jdk18on:1.72'
-//    implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
-
+    implementation 'org.bouncycastle:bcprov-jdk18on:1.72'
+    implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
+    implementation 'org.bouncycastle:bcprov-ext-jdk18on:1.72'
+    implementation 'commons-codec:commons-codec:1.15'
 }
 
 configurations.all() {
